# equation-solver

./: Cargo.toml  LISCENSE  README.md
examples/: README.md
examples/user-input/: Cargo.toml
examples/user-input/src/: main.rs
src/: equation.rs  error.rs  item.rs  lib.rs  parse.rs
tests/: test.rs
