[package]
description = "A simple equation solver that evaluates simple mathemetaical expressions"
edition = "2021"
license = "MIT"
name = "equation-solver"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[test]]
name = "test"
path = "tests/test.rs"
